--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,7 +14,7 @@
         android:clickable="true"
         android:src="@drawable/ic_enviar"
         android:id="@+id/fab"
-        android:tint="@android:color/white"
+        android:backgroundTint="@android:color/white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
 
